public/css/amrbundle.css
/* ... */
    .gist .gist-file .gist-meta {
        text-shadow: none !important;
    }

        .gist .gist-file .gist-meta a {
            color: #95a5a6 !important;
        }

    .gist .gist-file .gist-syntax {
        background: #fff;
        color: #2c3e50 !important;
    }

        .gist .gist-file .gist-syntax .hll {
            background-color: #34495e !important;
        }

        .gist .gist-file .gist-syntax .c, .gist .gist-file .gist-syntax .c1, .gist .gist-file .gist-syntax .cm, .gist .gist-file .gist-syntax .cp, .gist .gist-file .gist-syntax .cs {
            color: #95a5a6 !important;
        }

        .gist .gist-file .gist-syntax .err {
            color: #e74c3c;
            background-color: #95a5a6 !important;
        }

        .gist .gist-file .gist-syntax .k, .gist .gist-file .gist-syntax .kc, .gist .gist-file .gist-syntax .kd, .gist .gist-file .gist-syntax .kp, .gist .gist-file .gist-syntax .kr, .gist .gist-file .gist-syntax .kt, .gist .gist-file .gist-syntax .no {
            color: #2980b9 !important;
        }

        .gist .gist-file .gist-syntax .il, .gist .gist-file .gist-syntax .l, .gist .gist-file .gist-syntax .m, .gist .gist-file .gist-syntax .mf, .gist .gist-file .gist-syntax .mh, .gist .gist-file .gist-syntax .mi, .gist .gist-file .gist-syntax .mo, .gist .gist-file .gist-syntax .se {
            color: #8e44ad !important;
        }

        .gist .gist-file .gist-syntax .bp, .gist .gist-file .gist-syntax .n, .gist .gist-file .gist-syntax .nb, .gist .gist-file .gist-syntax .ni, .gist .gist-file .gist-syntax .nl, .gist .gist-file .gist-syntax .nn, .gist .gist-file .gist-syntax .nv, .gist .gist-file .gist-syntax .p, .gist .gist-file .gist-syntax .py, .gist .gist-file .gist-syntax .vc, .gist .gist-file .gist-syntax .vg, .gist .gist-file .gist-syntax .vi, .gist .gist-file .gist-syntax .w {
            color: #2c3e50 !important;
        }

        .gist .gist-file .gist-syntax .kn, .gist .gist-file .gist-syntax .nt, .gist .gist-file .gist-syntax .o, .gist .gist-file .gist-syntax .ow {
            color: #c0392b !important;
        }

        .gist .gist-file .gist-syntax .ge {
            font-style: italic !important;
        }

        .gist .gist-file .gist-syntax .gs {
            font-weight: 700 !important;
        }

        .gist .gist-file .gist-syntax .ld, .gist .gist-file .gist-syntax .s, .gist .gist-file .gist-syntax .s1, .gist .gist-file .gist-syntax .s2, .gist .gist-file .gist-syntax .sb, .gist .gist-file .gist-syntax .sc, .gist .gist-file .gist-syntax .sd, .gist .gist-file .gist-syntax .sh, .gist .gist-file .gist-syntax .si, .gist .gist-file .gist-syntax .sr, .gist .gist-file .gist-syntax .ss, .gist .gist-file .gist-syntax .sx {
            color: #f39c12 !important;
        }

        .gist .gist-file .gist-syntax .na, .gist .gist-file .gist-syntax .nc, .gist .gist-file .gist-syntax .nd, .gist .gist-file .gist-syntax .ne, .gist .gist-file .gist-syntax .nf, .gist .gist-file .gist-syntax .nx {
            color: #27ae60 !important;
        }

    .gist .gist-file .gist-data, .gist .gist-file .gist-meta, .gist .gist-file .line-numbers {
        background: #ecf0f1 !important;
    }

@font-face {
    font-family: 'Playball';
    font-style: normal;
    font-weight: 400;
    src: local('Playball'), local('Playball-Regular'), url(fonts/playball.woff2) format('woff2'), url(fonts/playball.woff) format('woff');
}

@font-face {
    font-family: AmiriWeb;
    font-style: normal;
    font-weight: 400;
    src: url('fonts/amiri-regular.eot?') format('eot'), url('fonts/amiri-regular.woff') format('woff'), url('fonts/amiri-regular.ttf') format('truetype');
}

.sidebar {
    width: 16rem;
    padding: 0;
}

.sidebar-nav {
    margin-bottom: 0;
}

nav a img {
    margin: 0;
}

.sidebar-sticky {
    width: 100%;
    left: 0;
    bottom: 0;
}

.container {
}

.content {
    margin-left: 18rem;
}

.profilePic {
    width: 192px;
    height: 192px;
    -webkit-border-radius: 96px;
    -moz-border-radius: 96px;
    border-radius: 96px;
    -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
    -moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
    box-shadow: 0 0 8px rgba(0, 0, 0, .8);
}

.blogTitle {
    font-family: 'Playball', cursive;
    font-size: 64px;
}

.frontPageIcons {
    margin: 0 10px 0 0;
    display: inline;
}

small {
    font-size: 11px;
}

::selection {
    background: #FFEB00;
    color: black;
}

::-moz-selection {
    background: #FFEB00;
    color: black;
}


.side-nav-icon {
    display: inline;
}

.sidebar-nav ul {
    list-style: none;
    margin-left: -40px;
}

    .sidebar-nav ul li ul {
        margin-left: -30px;
    }

.toggle-box {
    display: none;
}

    .toggle-box + label {
        cursor: pointer;
        display: block;
    }

        .toggle-box + label + div {
            display: none;
            margin-bottom: 10px;
        }

    .toggle-box:checked + label + div {
        display: block;
    }

    .toggle-box + label:before {
        display: block;
        float: left;
        text-align: center;
    }

/* entire container, keeps perspective */
.flip-container {
    -moz-perspective: 1000;
    -ms-perspective: 1000;
    -webkit-perspective: 1000;
    perspective: 1000;
    -webkit-transform-style: preserve-3d;
    transform-style: preserve-3d;
}
    /*  UPDATED! flip the pane when hovered */
    .flip-container:hover .back {
        -moz-transform: rotateY(0);
        -ms-transform: rotateY(0);
        -o-transform: rotateY(0);
        -webkit-transform: rotateY(0);
        transform: rotateY(0);
    }

    .flip-container:hover .front {
        -moz-transform: rotateY(180deg);
        -ms-transform: rotateY(180deg);
        -o-transform: rotateY(180deg);
        -webkit-transform: rotateY(180deg);
        transform: rotateY(180deg);
    }

.flip-container, .front, .back {
    width: 192px;
    height: 192px;
}
/* ... */

